--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,33 +1,34 @@
 html, body{
     background-color: #1f1b24;
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 div.main{
     position: absolute;
     left: 50%;
     top: 50%;
-    margin-top: -300px;
+    margin-top: -310px;
     margin-left: -250px;
     background-color:#121212;
     width: 500px;
-    height: 600px;
-    border: 1px solid #1f1b24;
+    height: 620px;
+    border: 1px solid #3700b3;
     border-radius: 16px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-bottom: 8px solid #3700b3;
+    color: #c5c5c5;
+    font-family: 'Trebuchet MS', sans-serif;
+    transition-duration: 0.25s;
 }
-p{
-  color:#f5f5f5;
-}
+
 div.me{
-    width: 200px;
-    margin-left: 150px;
+    width: 300px;
+    margin-left: 100px;
     height: 200px;
     text-align: center;
     color: #3700b3;
     text-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 14px;
     transition-property: 0;
     transition-duration: 0.25s;
@@ -43,11 +44,7 @@ div.me:hover{
     border: 2px solid #3700b3;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-#self:hover{
-    transition-property: 0;
-    transition-duration: 0.25s;
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 12px 40px 0 rgba(0, 0, 0, 0.19);
-}
+
 div.content{
     width: 100%;
     height: 315px;
@@ -58,6 +55,7 @@ div.content{
 div.social{
     width: 500px;
     height: 30px;
+    transition-duration: 0.40s;
 }
 
 div.social img{
@@ -73,19 +71,85 @@ div.social img:hover{
 
 
 div.about{
-    padding-top: 10px;
-    padding-bottom: 10px;
+    color:#c5c5c5;
     text-align: center;
-    width: 400px;
-    padding-left: 50px;
+    width: 450px;
+    padding-left: 25px;
+    transition-duration: 0.40s;
 }
 
-  ul.skills>li:before {
-    content:'🞄';
-    position: relative;
-    top: 1px;
-    left: -3px;
-  }
+@media only screen and (max-width: 768px) {
+    div.main{
+     margin-top: -325px;
+     margin-left: -200px;
+     width: 400px;
+     height: 650px;
+    }
+
+    div.me{
+     width: 300px;
+      margin-left: 50px;
+      height: 200px;
+    }
+
+
+    div.social{
+      margin-top: 50px;
+      width: 400px;
+     height: 30px;
+    }
+
+
+    div.about{
+      color:#c5c5c5;
+      text-align: center;
+     width: 350px;
+     padding-left: 25px;
+    }
+}
+
+@media only screen and (max-height: 660px) {
+    
+    div.main{
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     margin-top: -190px;
+     margin-left: -350px;
+     width: 750px;
+     height: 380px;
+    }
+
+    div.content{
+        width: 100%;
+        height: 380px;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
+    div.me{
+      width: 300px;
+      margin-left: 40px;
+      height: 200px;
+    }
+
+
+    div.social{
+      margin-top: 50px;
+      width: 100px;
+     height: 400px;
+    }
+
+
+    div.about{
+      color:#c5c5c5;
+      text-align: center;
+     width: 350px;
+     padding-left: 25px;
+    }
+}
+
+
   a{
     color:  #3700b3; 
     transition-property: 0;
@@ -109,5 +173,6 @@ div.about{
   
   a:active {
     text-decoration: none;
-    color:  #0aab5b; 
+    color:  #3700b3; 
   }
+
